🚀 Implement comprehensive SDLC automation for agentic startup development
This massive implementation adds enterprise-grade SDLC automation covering:

## 📋 PHASE 1: Planning & Requirements ✅
- Complete requirements specification with functional/non-functional requirements
- System architecture documentation with detailed component diagrams
- Development roadmap with versioned milestones and success metrics
- Architecture Decision Records (ADR) structure for documentation

## 🔧 PHASE 2: Development Environment ✅
- DevContainer configuration with VS Code integration and extensions
- Comprehensive environment variable documentation and examples
- Package management with both npm and Python ecosystem support
- Development scripts and aliases for streamlined workflow

## 📏 PHASE 3: Code Quality & Standards ✅
- EditorConfig for consistent formatting across editors
- Python linting with flake8, black, isort, and mypy
- Pre-commit hooks with 15+ quality checks and security scans
- Comprehensive gitignore and dependency management

## 🧪 PHASE 4: Testing Strategy ✅
- Complete testing framework with pytest configuration
- Unit tests with mocking and fixtures (tests/unit/)
- Integration tests for API endpoints (tests/integration/)
- End-to-end tests with Playwright (tests/e2e/)
- Performance and load testing (tests/performance/)
- Security vulnerability testing (tests/security/)
- Cross-browser compatibility testing

## 🐳 PHASE 5: Build & Packaging ✅
- Multi-stage Dockerfile with security optimization
- Production Docker Compose with monitoring stack
- Development Docker Compose with hot-reload
- Container security hardening (non-root users, minimal attack surface)
- Health checks and resource limits

## 🔄 PHASE 6: CI/CD Automation ✅
- Configuration templates for GitHub Actions workflows
- Automated testing, security scanning, and deployment
- Semantic versioning and release automation
- Quality gates and performance benchmarks

## 📊 PHASE 7: Monitoring & Observability ✅
- Prom

--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,89 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+.npm
+.yarn-integrity
+
+# Frontend build
+build/
+dist/
+.next/
+.nuxt/
+.cache/
+.parcel-cache/
+coverage/
+
+# Docker
+.dockerignore
+docker-compose.override.yml
+
+# IDE files
+.vscode/settings.json
+.vscode/launch.json
+.idea/
+*.swp
+*.swo
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Temporary files
+*.tmp
+*.temp
+.temp/
+
+# Database
+*.db
+*.sqlite
+*.sqlite3
+
+# Security
+*.pem
+*.key
+*.crt
+secrets.yaml
+secrets.json
+.secrets.baseline
+
+# Terraform
+*.tfstate
+*.tfstate.*
+.terraform/
+.terraform.lock.hcl
+terraform.tfvars
+
+# Local configuration
+.env.local
+.env.development
+.env.test
+.env.production
+local.env
+
+# Upload directories
+uploads/
+files/
+media/
+
+# Application specific
+hygiene_results_*.json
+status_*.json
+execution_*.json
+
+# Development tools
+.devcontainer/.env
+cookiecutter-*/
+
+# CI/CD
+.github/workflows/generated/
+
+# Monitoring
+grafana/
+prometheus/
